--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "gradio>=5.32.0",
+    "openai>=1.83.0",
     "pydantic>=2.11.5",
 ]
